2011-04-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Add more checks to the smooth streamer in case the sps/pps are not 
	set in the track or if we receive fragments with an unknown id

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Added the property hls-url that will be the base url used to render
	the playlist entries.

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/plugs (added):
	* flumotion/component/plugs/multibitrate (added):
	* flumotion/component/plugs/multibitrate/multibitrate.xml (added):
	* flumotion/component/plugs/multibitrate/__init__.py (added):
	* flumotion/component/plugs/multibitrate/Makefile.am (added):
	* flumotion/component/plugs/multibitrate/multibitrate.py (added):
	* flumotion/component/plugs/__init__.py (added):
	* flumotion/component/plugs/Makefile.am (added):
	Added a plug that renders m3u8 playlist for iphone multibitrate.

2011-02-15  Xavier Francisco  <xfrancisco@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Stopping the appsink when there's a version mismatch in mp4seek.
	See #12915
 	
2010-10-22  Marc-André Lureau  <mlureau@flumotion.com>

	* add support for basic seeking with dvr-window property.
	WARNING: this patch has not been reviewed, and has been quickly 
	tested. Ciao, Flumotion! And thanks for all the fish.

2010-10-19  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed and corrected by: Andoni Morales Alastruey

	* merged Smooth Streaming branch from git
	453cc2f262b64c0508f6b918b74677b5f287a819.

2010-10-05  Andoni Morales Alastruey  <amorales@flumotion.com>
