@@ -1,3 +1,9 @@
+2011-05-09  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
+	Check that all streams have enough fragments before setting the
+	mood to happy
+
 2011-04-07  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
